# mailing_list

./: README.md  pyproject.toml  requirements.txt
blog/: forms.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_list.html
client/: models.py  views.py
client/migrations/: 0001_initial.py  0002_client_user.py  0003_alter_client_email.py
client/templates/client/: client_list.html
config/: settings.py
mailing/: cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_mailing_massage.py  0003_alter_log_status.py  0004_log_mailing.py  0005_log_user.py  0006_remove_log_user_mailing_user.py  0007_alter_log_answer.py
mailing/templates/mailing/: base.html  mailing_detail.html  mailing_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
users/: models.py
users/management/commands/: add_group.py  cron.py  csu.py  fill.py
users/migrations/: 0001_initial.py
