[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["gtsoktoeva001 <galina-tsoktoeva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
pillow = "^10.0.0"
pytils = "^0.4.1"
load-dotenv = "^0.1.0"
pytz = "^2023.3"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
